# bf-search

./: .gitignore
scripts/: benchmark.rb  web.rb
src/: CMakeLists.txt
src/binding/: bfruby.c
src/bloom_search/: bfsearch-ruby.c  main.c
src/include/: definitions.h
src/lib/bloomfilter/: bloomfilter.c  bloomfilter.h
src/lib/tree/: matches.c  matches.h  node.c  node.h  node_list.c  node_list.h  positions_vector.c  positions_vector.h  query_node.c  tree.c  tree.h  util.c  util.h
src/test/: check_node.c  check_tree_util.c  test_bloomfilter.c  test_driver.c  test_driver.h  test_tree.c
